sidecar-injector/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyverno-envoy-sidecar
  namespace: kyverno-envoy-sidecar-injector
  labels:
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: sidecar-injector
spec:
  type: ClusterIP
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
  selector:
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: sidecar-injector
