sidecar-injector/manifests/mutatingwebhook.yaml

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kubernetes-sidecar-injector
  labels:
    app.kubernetes.io/name: sidecar-injector
    app.kubernetes.io/instance: sidecar-injector
webhooks:
  - name: kyverno-envoy-sidecar.sidecar-injector.svc
    clientConfig:
      service:
        name: kubernetes-sidecar-injector
        namespace: sidecar-injector
        path: "/mutate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZsakNDQTM2Z0F3SUJBZ0lVVFNGS2k0NDlzYWNmUXF4UTVnWFhBanU5SjA0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd096RTVNRGNHQTFVRUF3d3dhM1ZpWlhKdVpYUmxjeTF6YVdSbFkyRnlMV2x1YW1WamRHOXlMbk5wWkdWagpZWEl0YVc1cVpXTjBiM0l1YzNaak1CNFhEVEkwTURReE5qRXhNVFl3TlZvWERUSTFNRFF4TmpFeE1UWXdOVm93Ck96RTVNRGNHQTFVRUF3d3dhM1ZpWlhKdVpYUmxjeTF6YVdSbFkyRnlMV2x1YW1WamRHOXlMbk5wWkdWallYSXQKYVc1cVpXTjBiM0l1YzNaak1JSUNJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBZzhBTUlJQ0NnS0NBZ0VBdFNSeApXMWpGbWJrTW1 [...]
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1"]
    rules:
      - apiGroups:
          - ""
        resources:
          - pods
        apiVersions:
          - "v1"
        operations:
          - CREATE
        scope: '*'  
    objectSelector:
      matchExpressions:
        - key: kyverno-envoy-sidecar/injection
          operator: In
          values:
          - enabled
                  
---
